RESOLVED FIXED131865
bmalloc: AsyncTask should use Mutex instead of std::mutex
https://bugs.webkit.org/show_bug.cgi?id=131865
Summary bmalloc: AsyncTask should use Mutex instead of std::mutex
Geoffrey Garen
Reported 2014-04-18 16:43:48 PDT
bmalloc: AsyncTask should use Mutex instead of std::mutex
Attachments
Patch (3.25 KB, patch)
2014-04-18 16:45 PDT, Geoffrey Garen
barraclough: review+
Geoffrey Garen
Comment 1 2014-04-18 16:45:21 PDT
Geoffrey Garen
Comment 2 2014-04-18 20:23:27 PDT
Note You need to log in before you can comment on or make changes to this bug.