bmalloc: AsyncTask should use Mutex instead of std::mutex https://bugs.webkit.org/show_bug.cgi?id=131865

Reviewed by Gavin Barraclough.

std::mutex is so slow that it makes parallelizing simple tasks through
AsyncTask a net regression. Mutex fixes this.

* bmalloc/AsyncTask.h:
(bmalloc::Function>::AsyncTask):
(bmalloc::Function>::join):
(bmalloc::Function>::runSlowCase):
(bmalloc::Function>::entryPoint):
* bmalloc/Mutex.h:
(bmalloc::Mutex::init):


Canonical link: https://commits.webkit.org/149946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167526 268f45cc-cd09-0410-ab3c-d52691b4dbfc